updated readme file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "react-error-reporting",
   "private": false,
   "version": "0.0.2",
+  "author": {
+    "name": "Abdullah Khan",
+    "email": "abdullahkhansk@yahoo.com",
+    "url": "https://github.com/yourusername"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AbdullahKhan780/react-error-reporting.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AbdullahKhan780/react-error-reporting/issues"
+  },
+  "homepage": "https://github.com/AbdullahKhan780/react-error-reporting#readme",
   "type": "module",
   "main": "dist/ReactErrorReporting.umd.js",
   "module": "dist/ReactErrorReporting.es.js",
